--- a/src/css/render.scss
+++ b/src/css/render.scss
@@ -61,13 +61,25 @@
   width: 50%;
   border-left: 1px solid #eee;
   border-right: 1px solid #eee;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 16px;
-  overflow-y: auto;
-  overflow-x: hidden;
-  word-wrap: break-word;
   color: inherit;
   margin: 0;
+  background-color: #fcfaf2;
+  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.jmp-wrapper #jmp-content .jmp-html #render-html {
+  width: 100%;
+  /* height: 100%; */
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 16px 16px 160px;
+  /* overflow-y: auto; */
+  /* overflow-x: hidden; */
+  word-wrap: break-word;
 }
 
 .jmp-wrapper #jmp-content .jmp-html ul {
@@ -87,4 +99,3 @@
   width: 100% !important;
   height: 100% !important;
 }
-
